# timeclonk

./: .envrc  .gitignore  .gitmodules  Cargo.toml  README.md  changelog.md  flake.nix  module.nix  schema.txt
elm/: elm-srcs.nix  elm.json
elm/elmcommon/src/: Common.elm  Util.elm
elm/src/: Data.elm  InviteUser.elm  Login.elm  Main.elm  Paginator.elm  PrintInvoice.elm  ProjectEdit.elm  ProjectListing.elm  ProjectTime.elm  ProjectView.elm  PublicInterface.elm  ResetPassword.elm  Route.elm  TaskSummary.elm  TcCommon.elm  TimeReporting.elm  TimeTotaler.elm  TimeclonkInterface.elm  UserInterface.elm  UserSettings.elm  UserTime.elm
elm/tests/: UtilTest.elm
server/: Cargo.toml  benvoice.typ  config.toml  invoice.typ  watchrun.sh
server/src/: config.rs  data.rs  email.rs  interfaces.rs  invoice.rs  main.rs  messages.rs  migrations.rs  sqldata.rs
server/static/: index.html
