[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"

base64 = "0.2.1"
env_logger = "0.5.13"
rusqlite = "0.23.0"
log = "0.4.0"
serde = "1.0.124"
serde_derive = "1.0.124"
serde_json = "1.0.64"
uuid = { version = "0.8", features = ["serde", "v4"] }
crypto-hash = "0.3.1"
time = "0.1"
rand = "0.5.0"
toml = "0.4.8"
simple-error = "0.2.1"
barrel = { version = "0.6.5", features = ["sqlite3"] }
clap = "2.33.2"
