[package]
name = "timeclonk-server"
version = "0.1.0"
authors = ["Ben Burdette <ben@interstitial.coop>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orgauth = { path = "../orgauth/rustlib" }
env_logger = "0.5.13"
rusqlite = "0.29.0"
barrel = { version = "0.7.0", features = ["sqlite3"] }
log = "0.4.0"
actix-web = "4.3.1"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-files = "0.6.2"
futures = "0.1.25"
serde = "1.0.124"
serde_derive = "1.0.124"
serde_json = "1.0.64"
uuid = { version = "0.8", features = ["serde", "v4"] }
crypto-hash = "0.3.1"
time = "0.2.27"
rand = "0.5.0"
toml = "0.4.8"
simple-error = "0.2.1"
json = "*"
lettre = "0.10.4"
clap = "2.33.2"
timer = "0.2.0"
chrono = "0.4.26"
either = "1.6.1"
